--- a/app/templates/route1/index.hbs
+++ b/app/templates/route1/index.hbs
@@ -48,9 +48,14 @@
  {{!-- find block --}}
 
 <div class="find">
+    <div class="input-group mb-3">
+      <Input type="text" class="form-control" @value={{search}} placeholder="contact name"></Input>
 
-    <Input type="text" @value={{search}}></Input>
-    <button {{action "find"}} class="btn btn-outline-info">find record</button>
+    <div class="input-group-append">
+        <button {{action "find"}} class="btn btn-info m-0 px-3 py-2 z-depth-0 waves-effect " >find record</button>
+
+    </div>
+</div>
 
 </div>
 
