--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,11 +2,9 @@
 
 <div class="jumbotron">
   <h1 class="display-3">CONTACT APP :)</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for
-                  calling extra attention to featured content or information.</p>
+  <p class="lead">This is a simple Conatact application that make your life simpler by saving your important contact and information</p>
   {{!-- <hr class="my-2"> --}}
-  <p>It uses utility classes for typography and
-     spacing to space content out within the larger container.</p>
+  <p>It uses ember framework and firebase to create and manage the application</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="/route1" role="button" >CREATE CONTACT</a>
   </p>
