--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,7 +8,8 @@
   <p>It uses utility classes for typography and
      spacing to space content out within the larger container.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="/route1" role="button" >CREATE CONTACT</a>
+    <LinkTo @route="route1" class="btn btn-primary btn-lg" role="button">CREATE CONTACT</LinkTo>
+
   </p>
 </div>
 
