--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,3 +54,15 @@ hr{
 
 }
 
+
+.load{
+    font-size: 70px;
+    position: absolute;
+    top:35%;
+    left:35%;
+    color: rgb(94, 91, 91);
+    background: #FFFFFF;
+    text-shadow: 1px 3px 0 #969696, 1px 13px 5px #aba8a8;
+    
+}
+
