--- a/app/templates/route2.hbs
+++ b/app/templates/route2.hbs
@@ -1,5 +1,5 @@
 
-<a class="btn btn-outline-danger" href="/route1" role="button" >+new<</a>
+<LinkTo @route="route1" class="btn btn-outline-danger" role="button">+new</LinkTo>
 
 <div class="show">
 
