changing the route2

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,7 +11,7 @@
     <LinkTo @route="route1" class="nav-link">contact</LinkTo>
   </li>
     <li class="nav-item">
-    <LinkTo @route="route2" class="nav-link">List</LinkTo>
+    <LinkTo @route="list" class="nav-link">List</LinkTo>
   </li>
 
  </ul>
