--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,7 +6,7 @@
   {{!-- <hr class="my-2"> --}}
   <p>It uses ember framework and firebase to create and manage the application</p>
   <p class="lead">
-    <LinkTo @route="route1" class="btn btn-primary btn-lg" role="button">CREATE CONTACT</LinkTo>
+    <LinkTo @route="new" class="btn btn-primary btn-lg" role="button">CREATE CONTACT</LinkTo>
 
   </p>
 </div>
