--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
     <LinkTo @route="index" class="nav-link">FIRE BASE MAIN PAGE</LinkTo>
   </li>
   <li class="nav-item">
-    <LinkTo @route="route1" class="nav-link">contact</LinkTo>
+    <LinkTo @route="new" class="nav-link">contact</LinkTo>
   </li>
     <li class="nav-item">
     <LinkTo @route="list" class="nav-link">List</LinkTo>
