--- a/app/templates/list.hbs
+++ b/app/templates/list.hbs
@@ -1,5 +1,5 @@
 
-<LinkTo @route="route1" class="btn btn-outline-danger" role="button">+new</LinkTo>
+<LinkTo @route="new" class="btn btn-outline-danger" role="button">+new</LinkTo>
 
 <div class="show">
 
