--- a/app/templates/list/detail.hbs
+++ b/app/templates/list/detail.hbs
@@ -13,7 +13,7 @@
     <p class="card-text">{{model.phone_number}}</p>
 
     {{!-- <a href="/route1" class="btn btn-primary">edit</a> --}}
-    <LinkTo @route="route1.edit" class="btn btn-primary" @model={{model.id}}>edit </LinkTo>
+    <LinkTo @route="edit" class="btn btn-primary" @model={{model.id}}>edit </LinkTo>
     <a href="#" class="btn btn-danger" {{action "delete"}}>delete</a>
 
   </div>
